--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,6 @@
     android:background="@color/colorMain"
     android:weightSum="10"
     tools:context="org.d3ifcool.rememberactivities.HomeActivity">
-
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
@@ -22,226 +21,245 @@
         android:layout_centerInParent="true"
         android:textColor="@android:color/white"/>
 </RelativeLayout>
+
     <GridLayout
-        android:columnCount="2"
-        android:rowCount="3"
-        android:alignmentMode="alignMargins"
-        android:columnOrderPreserved="false"
-        android:layout_weight="8"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="14dp">
+        android:layout_weight="10"
+        android:columnCount="2"
+        android:columnOrderPreserved="false"
+        android:padding="14dp"
+        android:rowCount="3">
 
         <android.support.v7.widget.CardView
             android:id="@+id/tambah"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
-            app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            >
+            app:cardElevation="8dp">
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/tambah"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/tambah" />
+
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Tambah Kegiatan"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/lihatkegiatan_cardview"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
             app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
 
             >
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/kegiatan"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/kegiatan" />
+
                 <TextView
-                    android:text="@string/lihat_kegiatan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/lihat_kegiatan"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/lihatpencapaian"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
             app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
 
             >
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/pencapain"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/pencapain" />
+
                 <TextView
-                    android:text="@string/lihat_pencapaian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/lihat_pencapaian"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/tentangkami"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
             app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
 
             >
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/tentangkami"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/tentangkami" />
+
                 <TextView
-                    android:text="@string/tentang_kami"
                     android:id="@+id/tentangKamikami"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/tentang_kami"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/home_profile"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
             app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
 
             >
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/ic_profile"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_profile" />
+
                 <TextView
-                    android:text=" Profil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text=" Profil"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/umpanBalik"
-            android:layout_width="75dp"
+            android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_columnWeight="1"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardBackgroundColor="#FFFF"
             app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
 
             >
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
+
                 <ImageView
-                    android:src="@drawable/feedback"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/feedback" />
+
                 <TextView
-                    android:text="Umpan Balik"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="Umpan Balik"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
     </GridLayout>
+
 
 </LinearLayout>
 
